# workshop-fiia-feb-2026

./: README.md
01-intro-llms/: README.md
01-intro-llms/examples/: 02-tokens.py  README.md  requirements.txt
01-intro-llms/examples/01-first-call/: anthropic_first_call.py  (+3 more)
01-intro-llms/issue-prioritizer/: .env.example  README.md  requirements.txt
agents/: README.md  pyproject.toml
agents/incident-commander-system/: README.md
agents/intro/: README.md
agents/workflows/: README.md
low-code/documents/: 01-politica-triaje-issues.md  02-catalogo-servicios.md  03-guia-respuesta-incidentes.md
low-code/n8n-workflows/: Document Ingestion.json  Issue Prioritizer - Demo.json  Service Status.json
rag/: README.md
rag/tech-docs-explorer/: .env.example  .gitignore  README.md  __init__.py  main.py  pyproject.toml
rag/tech-docs-explorer/.streamlit/: config.toml
rag/tech-docs-explorer/config/: config.yaml  settings.py
rag/tech-docs-explorer/core/helpers/: __init__.py  pricing.py
rag/tech-docs-explorer/core/indexing/: __init__.py  models.py  pipeline.py  queries.py
rag/tech-docs-explorer/core/loaders/: __init__.py  base.py  pdf_loader.py  web_loader.py
rag/tech-docs-explorer/core/retrieval/: __init__.py  engine.py  models.py  transforms.py
rag/tech-docs-explorer/core/storage/: __init__.py  client.py  collections.py
rag/tech-docs-explorer/llm/: __init__.py  base.py  openai_provider.py
rag/tech-docs-explorer/ui/: __init__.py  pricing_display.py  streamlit_helpers.py
rag/tech-docs-explorer/ui/tabs/: chat_tab.py  explorer_tab.py  indexing_tab.py
(+72 files in other folders)
